kubernates/03-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: config-test-pod
  labels:
    role: config-test-pod
spec:
  containers:
    - name: config-demo
      image: busybox
      command: ["sh", "-c", "echo CONFIG_MSG=$CONFIG_MSG && echo CONFIG_SECRET=$CONFIG_SECRET && sleep 3600"]
      imagePullPolicy: IfNotPresent
