kubernates/configmap-env-pod.yaml
# 환경변수 방식
apiVersion: v1
kind: Pod
metadata:
  name: configmap-env-demo
  labels:
    role: configmap-env-demo
spec:
  containers:
    - name: demo-container
      image: busybox
      command: ["/bin/sh", "-c", "env; sleep 3600"]
      imagePullPolicy: IfNotPresent
#      ports:
#        - name: configmap-env-demo
#          containerPort: 80
#          protocol: TCP
  restartPolicy: Always
